.k8s/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flywheel-ui
  namespace: default
  labels:
    app: flywheel-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flywheel-ui
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: flywheel-ui
    spec:
      containers:
        - name: flywheel-ui
          image: registry.cn-beijing.aliyuncs.com/fundwit/flywheel-ui:sha-498d460
          imagePullPolicy: IfNotPresent
          # envFrom:
          #  - configMapRef:
          #      name: flywheel
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: cr-aliyun
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: flywheel-ui
  name: flywheel-ui
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: flywheel-ui
  sessionAffinity: None
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flywheel-ui
  namespace: default
spec:
  tls:
    - hosts:
        - flywheel-core.fundwit.com
      secretName: tls-fundwit.com
  rules:
    - host: flywheel.fundwit.com
      http:
        paths:
          - backend:
              service:
                name: flywheel-ui
                port:
                  number: 80
            path: /
            pathType: Prefix
